Change total traversals output message